--- a/VS2008/tetris.vcproj
+++ b/VS2008/tetris.vcproj
@@ -185,6 +185,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\res\resource.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\tetris.h"
 				>
 			</File>
@@ -194,6 +198,14 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath="..\res\tetris.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\res\TetrisColor.ico"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
